--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,17 @@
-# Application dependencies
-textual==3.2.0
-rich==14.0.0
-psutil==5.9.8
-PyYAML==6.0.1
-typing-extensions==4.13.2
+# Core dependencies
+textual>=0.52.1    # Terminal UI framework
+psutil>=5.9.0      # Process and system monitoring
+pysnmp>=4.4.12     # SNMP monitoring support
+typing-extensions>=4.5.0  # Type hinting support
+python-dateutil>=2.8.2   # Date handling utilities
 
 # Development dependencies
-black==25.1.0
-pylint==3.3.7
-mypy==1.15.0
-pytest==8.0.2
-pytest-asyncio==0.23.5
-pytest-cov==4.1.0
+pytest>=8.0.0      # Testing framework
+pytest-cov>=4.1.0  # Test coverage
+pylint>=3.0.0      # Code linting
+black>=24.1.0      # Code formatting
+mypy>=1.8.0        # Static type checking
 
-# Type stubs
-types-PyYAML==6.0.12.12
-types-psutil==5.9.5.20240106
-
+# Optional dependencies
+rich>=13.7.0       # Terminal formatting (included with textual but listed for clarity)
+wcwidth>=0.2.5     # Terminal width calculations
