Initial commit with AI integration, logging, and error fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.analysis.autoImportCompletions": true
+    "python.analysis.autoImportCompletions": true,
+    "circleci.filters.branchFilter": "allBranches",
+    "circleci.persistedProjectSelection": [
+        "circleci/FXrXpNMLy4A1QMf3RhsJuC/Wf8Xu97RLd2RWfuHZhMiGj"
+    ]
 }
